# connectionslib

./: CMakeLists.txt  README.md
src/: cobject.cpp  cobject.h
